# rollmem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/en/: api.md  getting-started.md  how-it-works.md  index.md  persistence.md
docs/ko/: api.md  getting-started.md  how-it-works.md  index.md  persistence.md
src/rollmem/: __init__.py  memory.py  message.py
tests/: test_memory.py
