[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollmem"
version = "0.0.2"
description = "Standalone, dependency-free rolling conversation memory (summary + buffer), inspired by LangChain's ConversationSummaryBufferMemory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "son okmoo", email = "sonokmoo@gmail.com" },
]
keywords = ["llm", "memory", "conversation", "summary", "chatbot", "rag", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/okdoittttt/rollmem"
Repository = "https://github.com/okdoittttt/rollmem"
Issues = "https://github.com/okdoittttt/rollmem/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rollmem"]
